# network-sandbox

./: .gitignore  AGENTS.md  vtysh.sh  wireshark-docker.sh
.codex/skills/gh-pr-close-issue/: SKILL.md
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: hoyan-test.yml
batfish-clos-lab/: .gitignore  README.md  batfish-clos.clab.yml  docker-compose.yml  pyproject.toml
batfish-clos-lab/scripts/: collect_snapshot.py  validate.py
batfish-firewall-lab/: README.md  batfish-firewall.clab.yml  docker-compose.yml  pyproject.toml
batfish-firewall-lab/live/frr/: client.conf  daemons  server.conf
batfish-firewall-lab/scripts/: collect_snapshot.py  validate.py
batfish-firewall-lab/snapshot/batfish/: layer1_topology.json
batfish-firewall-lab/snapshot/configs/: client.cfg  fw.cfg  r1.cfg  r2.cfg  server.cfg
batfish-firewall-lab/snapshot/hosts/: fw.json
batfish-firewall-lab/snapshot/iptables/: fw.iptables
clos/: .gitignore  README.md  clos.clab.yml
clos/captures/: vm-ping-dc1-to-dc2.pcap
clos/scripts/: vm-add.sh  vm-del.sh  vm-list.sh
example/: example.clab.yml  example.clab.yml.annotations.json
example/clab-ceos01/: ansible-inventory.yml  authorized_keys  nornir-simple-inventory.yml  topology-data.json
example/configs/: ceos1.cfg  ceos2.cfg
hoyan/: .gitignore  README.md  go.mod  hoyan.clab.yml
hoyan/intent/: policies.yml  queries.yml
ospf/: README.md  ospf.clab.yml
srv6-vpn-frr/: README.md  srv6-vpn-frr.clab.yml
srv6-vpn-frr/scripts/: apply-link-impairment.sh  setup-frr-srv6.sh
tools/yang/: README.md
(+247 files in other folders)
